# smart-contract-template

./: README.md  always-succeeds.cabal  build.sh  cabal.project
nix/pkgs/haskell/: haskell.nix
src/: AlwaysSucceeds.hs  write-contract-script-file.hs
