cabal-version:      3.0
name:               smart-contract-template
version:            0.1.0.0
license:            Apache-2.0
license-files:      LICENSE
author:             papa.goose@koralabs.io
maintainer:  

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    default-extensions:   NoImplicitPrelude
                          OverloadedStrings
    ghc-options:
      -Wall
      -Wcompat
      -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -Widentities
      -Wpartial-fields
      -Wunused-packages
      -rtsopts
      -fobject-code
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import: lang
  exposed-modules:
    AlwaysSucceeds
  build-depends:
                  base >= 4.9 && < 5
                  , bytestring -any
                  , cardano-api
                  , plutus-ledger-api -any
                  , plutus-tx -any
                  , plutus-tx-plugin -any
                  , serialise
  hs-source-dirs: src

executable write-contract-script-file
  import:         lang
  hs-source-dirs: src
  main-is:        write-contract-script-file.hs
  ghc-options:    -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:  base >= 4.9 && < 5
                  , cardano-api
                  , plutus-ledger-api
                  , bytestring
                  , cardano-ledger-alonzo
                  , plutus-tx -any
                  , plutus-tx-plugin -any
                  , serialise
  other-modules:  AlwaysSucceeds
